This is the WebKit-side change needed to fix canvas.getImageData() for Chromium.  The unpremultiply code in Skia assumes that unpremultiplied values should be rounded, while CG does not.  In addition, the fixed point inversion used by Skia introduces slight inaccuracies that make us fail this test.  This change brings Chromium in line with the CG path. https://bugs.webkit.org/show_bug.cgi?id=30825

Reviewed by Dmitry Titov.

Covered by LayoutTests/fast/canvas/canvas-getImageData.html

* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::getImageData):



Canonical link: https://commits.webkit.org/41841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50408 268f45cc-cd09-0410-ab3c-d52691b4dbfc